@@ -614,3 +614,20 @@ def hide_attrs(obj, *attrs):
                 obj_vals[name] = saved_val
             elif name in obj_vals:
                 del obj_vals[name]
+
+
+def is_same_domain(host, pattern):
+    """
+    Return ``True`` if the host is either an exact match or a match
+    to the wildcard pattern.
+    Any pattern beginning with a period matches a domain and all of its
+    subdomains. (e.g. ``.example.com`` matches ``example.com`` and
+    ``foo.example.com``). Anything else is an exact string match.
+    """
+    if not pattern:
+        return False
+
+    pattern = pattern.lower()
+    return (pattern[0] == "." and
+            (host.endswith(pattern) or host == pattern[1:]) or
+            pattern == host)
