@@ -6,7 +6,10 @@ from zope.interface import (
     )
 
 from pyramid.security import NO_PERMISSION_REQUIRED
-from pyramid.session import check_csrf_token
+from pyramid.session import (
+    check_csrf_origin,
+    check_csrf_token,
+)
 from pyramid.response import Response
 
 from pyramid.interfaces import (
@@ -491,6 +494,7 @@ def csrf_view(view, info):
             # Assume that anything not defined as 'safe' by RFC2616 needs
             # protection
             if request.method not in {"GET", "HEAD", "OPTIONS", "TRACE"}:
+                check_csrf_origin(request, raises=True)
                 check_csrf_token(request, val, raises=True)
             return view(context, request)
         wrapped_view = csrf_view
